--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -13,6 +13,10 @@
             android:title="Voluntarios"/>
 
         <item
+            android:id="@+id/nav_programs"
+            android:title="Visitas Programadas"/>
+
+        <item
             android:id="@+id/nav_requests"
             android:title="Solicitudes"/>
     </group>
