--- a/app/src/main/res/layout/item_visita.xml
+++ b/app/src/main/res/layout/item_visita.xml
@@ -24,16 +24,17 @@
         <TextView
             android:id="@+id/visita_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textColor="#000"
             android:layout_weight="1"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center|bottom|start"/>
 
         <TextView
             android:id="@+id/visita_fecha"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"/>
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center|start|top"/>
 
     </LinearLayout>
 
