--- a/app/src/main/res/layout/item_visita.xml
+++ b/app/src/main/res/layout/item_visita.xml
@@ -4,48 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:elevation="15dp">
+    android:layout_margin="16dp"
+    android:elevation="15dp"
+    android:id="@+id/visita_linear">
 
-    <ImageView
-        android:src="@drawable/round_user"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/visita_card_view"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"/>
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="10dp"
+        android:layout_marginBottom="10dp">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:gravity="center">
-        <TextView
-            android:id="@+id/visita_name"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="#000"
-            android:layout_weight="1"
-            android:layout_gravity="center|bottom|start"/>
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/visita_fecha"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|start|top"/>
+            <ImageView
+                android:src="@drawable/round_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"/>
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:gravity="center">
+                <TextView
+                    android:id="@+id/visita_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textColor="#000"
+                    android:layout_weight="1"
+                    android:layout_gravity="center|bottom|start"/>
 
+                <TextView
+                    android:id="@+id/visita_fecha"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center|start|top"/>
 
-    <ImageView
-        android:id="@+id/visita_arrow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-        android:src="@drawable/volunteer_arrow"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/visita_arrow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:src="@drawable/volunteer_arrow"
+                android:layout_gravity="center"
+                android:visibility="gone"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
